syntax = "proto3";

package com.neogenesis.grpc;

option java_package = "com.neogenesis.grpc";
option java_multiple_files = true;

service BioPrintService {
    rpc StreamTelemetryAndControl (stream PrinterTelemetry) returns (stream KinematicCommand);
}

service ProtocolService {
    rpc CreateDraft (CreateDraftRequest) returns (ProtocolDraftRecord);
    rpc UpdateDraft (UpdateDraftRequest) returns (ProtocolDraftRecord);
    rpc PublishVersion (PublishVersionRequest) returns (ProtocolVersionRecord);
    rpc ListProtocols (ListProtocolsRequest) returns (ListProtocolsResponse);
    rpc GetProtocolVersion (GetProtocolVersionRequest) returns (ProtocolVersionRecord);
    rpc DiffVersions (DiffVersionsRequest) returns (DiffVersionsResponse);
}

service RunService {
    rpc StartRun (StartRunRequest) returns (RunRecord);
    rpc PauseRun (RunControlRequest) returns (RunRecord);
    rpc AbortRun (RunControlRequest) returns (RunRecord);
    rpc GetRun (GetRunRequest) returns (RunRecord);
    rpc StreamRunEvents (StreamRunEventsRequest) returns (stream RunEventRecord);
    rpc StreamTelemetry (StreamTelemetryRequest) returns (stream TelemetryRecord);
}

service GatewayService {
    rpc RegisterGateway (RegisterGatewayRequest) returns (GatewayRecord);
    rpc Heartbeat (HeartbeatRequest) returns (GatewayRecord);
    rpc PushRunEvents (PushRunEventsRequest) returns (GatewayAck);
    rpc PushTelemetry (PushTelemetryRequest) returns (GatewayAck);
    rpc FetchConfig (FetchConfigRequest) returns (GatewayConfig);
}

service MetricsService {
    rpc GetReproducibilityScore (GetReproducibilityScoreRequest) returns (ReproducibilityScoreResponse);
    rpc ListDriftAlerts (ListDriftAlertsRequest) returns (ListDriftAlertsResponse);
    rpc ExportRunReport (ExportRunReportRequest) returns (RunReportResponse);
}

message PrinterTelemetry {
    string printer_id = 1;
    int64 timestamp_ms = 2;
    float nozzle_temp_celsius = 3;
    float extrusion_pressure_kpa = 4;
    float cell_viability_index = 5;
    bytes encrypted_image_matrix = 6;
    float bio_ink_viscosity_index = 7;
    float bio_ink_ph = 8;
    float nir_ii_temp_celsius = 9;
    float morphological_defect_probability = 10;
    string print_job_id = 11;
    string tissue_type = 12;
}

message KinematicCommand {
    string command_id = 1;
    string action_type = 2;
    float adjust_pressure = 3;
    float adjust_speed = 4;
    float target_nozzle_temp_celsius = 5;
    float target_pressure_kpa = 6;
    bool emergency_stop_latched = 7;
}

message CreateDraftRequest {
    string tenant_id = 1;
    string protocol_id = 2;
    string title = 3;
    string content_json = 4;
    string actor_id = 5;
}

message UpdateDraftRequest {
    string tenant_id = 1;
    string protocol_id = 2;
    string title = 3;
    string content_json = 4;
    string actor_id = 5;
}

message PublishVersionRequest {
    string tenant_id = 1;
    string protocol_id = 2;
    string actor_id = 3;
    string changelog = 4;
}

message ListProtocolsRequest {
    string tenant_id = 1;
    int32 limit = 2;
}

message GetProtocolVersionRequest {
    string tenant_id = 1;
    string protocol_id = 2;
    int32 version = 3;
}

message DiffVersionsRequest {
    string tenant_id = 1;
    string protocol_id = 2;
    int32 base_version = 3;
    int32 target_version = 4;
}

message ProtocolDraftRecord {
    string tenant_id = 1;
    string protocol_id = 2;
    string title = 3;
    string content_json = 4;
    string updated_by = 5;
    int64 created_at_ms = 6;
    int64 updated_at_ms = 7;
}

message ProtocolVersionRecord {
    string tenant_id = 1;
    string protocol_id = 2;
    int32 version = 3;
    string title = 4;
    string content_json = 5;
    string published_by = 6;
    string changelog = 7;
    int64 created_at_ms = 8;
}

message ProtocolSummary {
    string tenant_id = 1;
    string protocol_id = 2;
    string title = 3;
    int32 latest_version = 4;
    bool has_draft = 5;
    int64 updated_at_ms = 6;
}

message ListProtocolsResponse {
    repeated ProtocolSummary protocols = 1;
}

message DiffVersionsResponse {
    string summary = 1;
    repeated string added_lines = 2;
    repeated string removed_lines = 3;
}

message StartRunRequest {
    string tenant_id = 1;
    string protocol_id = 2;
    int32 protocol_version = 3;
    string run_id = 4;
    string gateway_id = 5;
    string actor_id = 6;
}

message RunControlRequest {
    string tenant_id = 1;
    string run_id = 2;
    string actor_id = 3;
    string reason = 4;
}

message GetRunRequest {
    string tenant_id = 1;
    string run_id = 2;
}

message StreamRunEventsRequest {
    string tenant_id = 1;
    string run_id = 2;
    int64 since_ms = 3;
    int32 limit = 4;
    int64 since_seq = 5;
}

message StreamTelemetryRequest {
    string tenant_id = 1;
    string run_id = 2;
    int64 since_ms = 3;
    int32 limit = 4;
    int64 since_seq = 5;
}

message RunRecord {
    string tenant_id = 1;
    string run_id = 2;
    string protocol_id = 3;
    int32 protocol_version = 4;
    string status = 5;
    string gateway_id = 6;
    string started_by = 7;
    int64 started_at_ms = 8;
    int64 updated_at_ms = 9;
    int64 paused_at_ms = 10;
    int64 aborted_at_ms = 11;
    string abort_reason = 12;
}

message RunEventRecord {
    string tenant_id = 1;
    string run_id = 2;
    string event_type = 3;
    string source = 4;
    string payload_json = 5;
    int64 created_at_ms = 6;
    int64 seq = 7;
}

message TelemetryRecord {
    string tenant_id = 1;
    string run_id = 2;
    string gateway_id = 3;
    string metric_key = 4;
    double metric_value = 5;
    string unit = 6;
    double drift_score = 7;
    int64 recorded_at_ms = 8;
    int64 seq = 9;
}

message RegisterGatewayRequest {
    string tenant_id = 1;
    string gateway_id = 2;
    string display_name = 3;
    string certificate_serial = 4;
    string actor_id = 5;
}

message HeartbeatRequest {
    string tenant_id = 1;
    string gateway_id = 2;
    string certificate_serial = 3;
}

message GatewayRecord {
    string tenant_id = 1;
    string gateway_id = 2;
    string display_name = 3;
    string certificate_serial = 4;
    string status = 5;
    int64 last_heartbeat_at_ms = 6;
    int64 updated_at_ms = 7;
}

message GatewayRunEvent {
    string run_id = 1;
    string event_type = 2;
    string payload_json = 3;
    int64 created_at_ms = 4;
}

message PushRunEventsRequest {
    string tenant_id = 1;
    string gateway_id = 2;
    repeated GatewayRunEvent events = 3;
}

message GatewayTelemetry {
    string run_id = 1;
    string metric_key = 2;
    double metric_value = 3;
    string unit = 4;
    double drift_score = 5;
    int64 recorded_at_ms = 6;
}

message PushTelemetryRequest {
    string tenant_id = 1;
    string gateway_id = 2;
    repeated GatewayTelemetry telemetry = 3;
}

message GatewayAck {
    int32 accepted = 1;
    int32 rejected = 2;
    string message = 3;
}

message FetchConfigRequest {
    string tenant_id = 1;
    string gateway_id = 2;
}

message GatewayConfig {
    string tenant_id = 1;
    string gateway_id = 2;
    string active_protocol_id = 3;
    int32 active_protocol_version = 4;
    string protocol_content_json = 5;
    int64 issued_at_ms = 6;
    bool empty = 7;
}

message GetReproducibilityScoreRequest {
    string tenant_id = 1;
    string run_id = 2;
}

message ReproducibilityScoreResponse {
    string tenant_id = 1;
    string run_id = 2;
    double score = 3;
    int32 event_count = 4;
    int32 telemetry_count = 5;
    int32 drift_alert_count = 6;
}

message ListDriftAlertsRequest {
    string tenant_id = 1;
    string run_id = 2;
    int32 limit = 3;
}

message DriftAlertRecord {
    string tenant_id = 1;
    string run_id = 2;
    string severity = 3;
    string metric_key = 4;
    double metric_value = 5;
    double threshold = 6;
    int64 created_at_ms = 7;
}

message ListDriftAlertsResponse {
    repeated DriftAlertRecord alerts = 1;
}

message ExportRunReportRequest {
    string tenant_id = 1;
    string run_id = 2;
}

message RunReportResponse {
    string tenant_id = 1;
    string run_id = 2;
    string protocol_id = 3;
    int32 protocol_version = 4;
    string status = 5;
    double reproducibility_score = 6;
    string events_json = 7;
    string telemetry_json = 8;
    bool evidence_chain_valid = 9;
    int64 generated_at_ms = 10;
}
